# mayflower_sandbox

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_CHANGES.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  VFS_FALLBACK_TEST_SPEC.md  catalog-info.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  sandbox_changes.md  sonar-project.properties  testfiles.md  tsconfig.json
.claude/skills/: sonar-status.md
.claude/skills/pr-quality/: SKILL.md
.claude/skills/sonar-fix/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: advanced.md  api.md  examples.md  index.md  installation.md  javascript.md  quickstart.md  tools.md
docs/advanced/: mcp.md  stateful-execution.md  worker-pool.md
docs/architecture/: command-routing.md  performance.md  security-model.md  system-design.md
docs/development/: architecture.md
docs/getting-started/: installation.md  quickstart.md
docs/how-to/: deployment.md  document-processing.md  skills-and-mcp.md  troubleshooting.md
docs/reference/: api.md  backend-api.md  configuration.md  document-helpers.md
docs/user-guide/: examples.md  helpers.md  tools.md
examples/: langgraph_agent_example.py  skills_mcp_quickstart.py
migrations/: 001_sandbox_schema.sql  002_mcp_and_skills.sql  003_mcp_schemas.sql
scripts/: check_quality.sh  setup-test-db.sh  skills_mcp_cli.py
src/mayflower_sandbox/: __init__.py  agent_state.py  bootstrap.py  cleanup.py  deepagents_backend.py  deno.json  executor.ts  executor_test.ts  filesystem.py  fs_utils.ts  fs_utils_test.ts  history_extraction.py  integrations.py  javascript_executor.py  manager.py  mcp_bindings.py  mcp_bridge_server.py  quickjs_executor.ts  sandbox_executor.py  schema_codegen.py  schema_validator.py  server.py  session.py  shell_executor.ts  shell_executor_test.ts  tools_skills_mcp.py  worker_pool.py  worker_server.ts  worker_server_test.ts  worker_utils.ts
src/mayflower_sandbox/busybox/: busybox.js  busybox.wasm
src/mayflower_sandbox/helpers/: __init__.py  _install.py  manifest.json
src/mayflower_sandbox/helpers/data/: __init__.py
src/mayflower_sandbox/helpers/document/: __init__.py  docx_ooxml.py  pdf_creation.py  pdf_manipulation.py  pptx_ooxml.py  xlsx_helpers.py
src/mayflower_sandbox/helpers/utils/: __init__.py
src/mayflower_sandbox/helpers/web/: __init__.py
src/mayflower_sandbox/tools/: __init__.py  base.py  execute.py  execute_code.py  execute_from_response.py  factory.py  file_delete.py  file_edit.py  file_glob.py  file_grep.py  file_list.py  file_read.py  file_write.py  javascript_execute.py  javascript_execute_prepared.py  javascript_run_file.py  prepare_code.py  run_file.py
tests/: JAVASCRIPT_TESTS.md  conftest.py  test_agent_state.py  test_backends_integration.py  test_cleanup.py  test_debug_recursion.py  test_debug_stream.py  test_deepagents_backend.py  test_document_persistence.py  test_document_skills.py  test_docx_add_comment.py  test_docx_to_markdown.py  test_error_boundaries.py  test_execute_code.py  test_executor.py  test_file_edit.py  test_file_glob.py  test_file_grep.py  test_file_write.py  test_filesystem.py  test_helper_direct.py  test_helpers_import.py  test_history_extraction.py  test_integrations_unit.py  test_javascript_executor.py  test_javascript_tools.py  test_javascript_vfs_integration.py  test_langgraph_integration.py  test_langgraph_realistic.py  test_langgraph_skills.py  test_maistack_tools.py  test_manager.py  test_mcp_bind.py  test_mcp_bindings_unit.py  test_mcp_bridge_server.py  test_migrations.py  test_pdf_helpers.py  test_pptx_debug.py  test_pptx_helpers.py  test_python_run_prepared_e2e.py  (+18 more)
