[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mayflower-sandbox"
version = "0.2.0"
description = "Python sandbox with persistent virtual filesystem for LangGraph agents"
authors = [{name = "Mayflower Team", email = "dev@mayflower.ai"}]
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",
    "datamodel-code-generator>=0.25.0",  # JSON Schema → Pydantic
    "httpx>=0.27",
    "jsonschema>=4.0.0",  # Runtime validation
    "langchain-core>=0.3.0",
    "mcp>=1.9.4",
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "asyncpg-stubs>=0.30.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
]
examples = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
]

[tool.setuptools.package-data]
mayflower_sandbox = ["*.ts", "*.js", "helpers/**/*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# SonarQube-compatible output (junit.xml and coverage.xml)
# Usage: pytest --junitxml=junit.xml --cov=src --cov-report=xml
addopts = "--junitxml=junit.xml"

[tool.coverage.run]
# Use relative paths in coverage.xml for SonarQube compatibility
relative_files = true
source = ["src"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "S",    # flake8-bandit (security) - for SARIF/SonarQube
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from inside except without explicit exception chaining
    "B905",   # zip without strict parameter (Python 3.10+)
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary operator instead of if-else
    "N806",   # variable in function should be lowercase (for XML elements)
    # Security rules - intentional patterns
    "S101",   # Allow assert in tests
    "S104",   # Binding to all interfaces (intentional for Docker services)
    "S105",   # Hardcoded password (dev tokens, not real secrets)
    "S106",   # Hardcoded password argument
    "S108",   # Hardcoded temp file (often intentional)
    "S110",   # try-except-pass (often intentional for graceful fallbacks)
    "S112",   # try-except-continue (often intentional)
    "S603",   # subprocess call (sandbox intentionally runs code)
    "S607",   # partial path executable (sandbox intentionally uses python)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "E402",   # module level import not at top of file (needed for load_dotenv)
    "S101",   # assert in tests is expected
    "S311",   # pseudo-random generator ok in tests
]
"**/test_*.py" = [
    "S101",   # assert in tests is expected
    "S102",   # exec usage in tests for dynamic module creation
    "S311",   # pseudo-random generator ok in tests
]
# Document helpers parse docx/pptx XML from user-uploaded files (trusted source)
"**/helpers/document/*_ooxml.py" = [
    "S314",   # XML parsing is intentional for Office document manipulation
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore errors for external dependencies without stubs
[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "datamodel_code_generator.*",
    "jsonschema.*",
    "langchain_core.*",
    "langgraph.*",
    "aiohttp.*",
    "mcp.*",
    "yaml.*",
]
ignore_missing_imports = true

# Ignore errors in helper modules (optional dependencies)
[[tool.mypy.overrides]]
module = "mayflower_sandbox.helpers.*"
ignore_errors = true

# Relax type checking in tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
ignore_errors = true
