[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mayflower-sandbox"
version = "0.2.0"
description = "Python sandbox with persistent virtual filesystem for LangGraph agents"
authors = [{name = "Mayflower Team", email = "dev@mayflower.ai"}]
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "datamodel-code-generator>=0.53.0", # JSON Schema → Pydantic
    "httpx>=0.28.1",
    "jsonschema>=4.26.0", # Runtime validation
    "langchain-core>=1.2.7",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "bandit>=1.9.3",
    "pre-commit>=4.5.1",
    "asyncpg-stubs>=0.31.1",
    "python-dotenv>=1.2.1",
    "aiohttp>=3.13.3",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
]
examples = [
    "langgraph>=1.0.7",
    "langchain-anthropic>=1.3.1",
]

[tool.setuptools.package-data]
mayflower_sandbox = ["*.ts", "*.js", "helpers/**/*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# SonarQube-compatible output (junit.xml and coverage.xml)
# Usage: pytest --junitxml=junit.xml --cov=src --cov-report=xml
addopts = "--junitxml=junit.xml"

[tool.coverage.run]
# Use relative paths in coverage.xml for SonarQube compatibility
relative_files = true
source = ["src"]
# Exclude modules that run inside Pyodide sandbox (coverage not trackable)
omit = [
    "src/mayflower_sandbox/helpers/document/*",
    "src/mayflower_sandbox/helpers/_install.py",
    "src/mayflower_sandbox/helpers/__init__.py",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "S",    # flake8-bandit (security) - for SARIF/SonarQube
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from inside except without explicit exception chaining
    "B905",   # zip without strict parameter (Python 3.10+)
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary operator instead of if-else
    "N806",   # variable in function should be lowercase (for XML elements)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "E402",   # module level import not at top of file (needed for load_dotenv)
    "S101",   # assert in tests is expected
    "S108",   # /tmp paths in tests refer to sandbox VFS, not host filesystem
    "S311",   # pseudo-random generator ok in tests
]
"**/test_*.py" = [
    "S101",   # assert in tests is expected
    "S102",   # exec usage in tests for dynamic module creation
    "S108",   # /tmp paths in tests refer to sandbox VFS, not host filesystem
    "S311",   # pseudo-random generator ok in tests
]
# Document helpers run in Pyodide sandbox - /tmp paths are VFS, not host filesystem
"**/helpers/document/*.py" = [
    "S108",   # /tmp paths are sandbox VFS paths, not host filesystem
    "S314",   # XML parsing is intentional for Office document manipulation
]
# Server binds to 0.0.0.0 for container deployment
"**/server.py" = [
    "S104",   # Binding to all interfaces is intentional for Docker/K8s
]
# Sandbox executor runs Deno subprocess by design
"**/sandbox_executor.py" = [
    "S607",   # Partial path 'deno' is intentional - installed in PATH
]
# Execute code tool uses /tmp as default VFS path
"**/tools/execute_code.py" = [
    "S108",   # /tmp paths are sandbox VFS paths, not host filesystem
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore errors for external dependencies without stubs
[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "datamodel_code_generator.*",
    "jsonschema.*",
    "langchain_core.*",
    "langgraph.*",
    "aiohttp.*",
    "mcp.*",
    "yaml.*",
]
ignore_missing_imports = true

# Ignore errors in helper modules (optional dependencies)
[[tool.mypy.overrides]]
module = "mayflower_sandbox.helpers.*"
ignore_errors = true

# Relax type checking in tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
ignore_errors = true
